--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 html {
   color-scheme: light dark;
   font-family: system-ui, -apple-system, sans-serif;
-  color: CanvasText;
-  background-color: Canvas;
+  color: light-dark(#000, #fff);
+  background-color: light-dark(#fff, #000);
 }
 </style>
 </head>
