--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Theme switch</title>
 <script src="theme-switch.js"></script>
+
 <style>
+
 html {
   color-scheme: light dark;
   font-family: system-ui, -apple-system, sans-serif;
   color: light-dark(#000, #fff);
   background-color: light-dark(#fff, #000);
 }
+
 </style>
 </head>
 <body>
-<button id="themes" aria-label="light">Theme</button>
+<button id="themes">Theme switch</button>
 </body>
 </html>
